tests/method/missing_keyword.rz
struct Foo {
    bar() {}
}

print Foo().bar() // error: methods must be declared with 'fn' keyword